# Ghostship_ModelSwitcher

./: .gitignore  CMakeLists.txt  README.md  manifest.json
.github/workflows/: build.yml
assets/shaders/samus-beam/: shader.glsl  shader.hlsl  shader.metal
include/: array.h  library.h  mod.h
output/: manifest.json
src/: mod.c
src/actors/: models.h
src/actors/hatkid/: entry.c  geo.inc.c  geo_header.h  model.inc.c
src/actors/isabelle/: geo.inc.c  geo_header.h  model.inc.c
src/actors/mario_r96/: entry.c  geo.inc.c
src/actors/samus/: entry.c  geo.inc.c  geo_header.h  model.inc.c
